Ajout des informations importantes

--- a/Portfolio Adjaratou/index.html
+++ b/Portfolio Adjaratou/index.html
@@ -46,8 +46,8 @@
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Bonjour, Je m'appele<span class="name">Adjaratou Amadou DIALLO</span></h3>
-                            <h3 class="my-profession">Je suis <span class="typing">Ingenieure Developpeuse Full Stack</span></h3>
-                            <p>Mon rôle est d'accompagnée les entreprises et les particuliers dans la création des sites Web, des applications mobiles, des logos et plus. </p>
+                            <h3 class="my-profession">Je suis <span class="typing">Ingénieure Developpeuse Full Stack</span></h3>
+                            <p>Mon rôle est d'accompagner les entreprises et les particuliers dans la création des sites Web, des applications mobiles, des logos et plus. </p>
                             <a href="https://emersoncarneirodasilva.github.io/curriculo_online/" class="btn" target="_blank">Télécharger mon  CV</a>
                         </div>
                         <div class="home-img padd-15">
@@ -69,15 +69,15 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>Je suis une Ingenieure en Developpement des logiciels <span>...</span></h3>
-                                    <p>Je suis une détentrice un Master en Système d'Information Avancé à l'Ecole Nationale D'Ingénieure Abderhamane Baba TOURE(ENI/ABT). <br> <br>Je suis certifié par Orange Digital Center et ses parternaires en Developpement  Web et Mobile </p>        
+                                    <h3>Je suis une Ingénieure en Développement des logiciels <span>...</span></h3>
+                                    <p>Je suis une détentrice d'un Master en Système d'Information Avancé à l'Ecole Nationale D'Ingénieure Abderhamane Baba TOURE (ENI/ABT). <br> <br>Je suis certifié par Orange Digital Center et ses partenaires en Développement  Web et Mobile </p>        
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="personal-info padd-15">
                                     <div class="row">
                                         <div class="info-item padd-15">
-                                            <p>Date de Naissance: <span>12/02/1995</span></p>
+                                            <p>Date de Naissance: <span>######</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Age : <span>27</span></p>
@@ -293,8 +293,8 @@
                                 <div class="icon">
                                     <em class="fa fa-earth-americas"></em>
                                 </div>
-                                <h4>Application Web</h4>
-                                <p>Desenvolvo sites profissionais, blogs, portfólios, landing pages e e-commerces.</p>
+                                <h4>Application Web et Mobile</h4>
+                                <p>Création des sites vitrines, blogs, portfolio, sites e-commerce.</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
@@ -302,8 +302,8 @@
                                 <div class="icon">
                                     <em class="fa fa-code"></em>
                                 </div>
-                                <h4>Clean Code</h4>
-                                <p>Priorizo durante o desenvolvimento, um código limpo seguindo as melhores práticas do mercado.</p>
+                                <h4>Maquettage</h4>
+                                <p>Si vous avez besoin d'un Un Designer de Haute qualité, n'hesitez pas à me contacter.</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
@@ -311,8 +311,8 @@
                                 <div class="icon">
                                     <em class="fa fa-laptop-code"></em>
                                 </div>
-                                <h4>Interfaces de alta fidelidade</h4>
-                                <p>Procuro garantir que os elementos gráficos atendam aos requisitos pré-definidos pelo cliente.</p>
+                                <h4>Modélisation , Manageriale</h4>
+                                <p> UML, MERISE,Gestion de projets, Entreprenariat, Développement personnel, Markéting.</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
@@ -320,8 +320,8 @@
                                 <div class="icon">
                                     <em class="fa fa-object-group"></em>
                                 </div>
-                                <h4>Páginas web responsivas</h4>
-                                <p>Trabalho harmonizando a estrutura da página, equilibrando elementos visuais, em diferentes dispositivos.</p>
+                                <h4>Technique</h4>
+                                <p>Qualité et Sécurité des Systèmes d’Information (SI), Ingénierie Logicielle, Sécurité des réseaux, Télécommunication, Internet of Things(IOT).</p>
                             </div>
                         </div>                        
                         <div class="service-item padd-15">
@@ -330,7 +330,7 @@
                                     <em class="fa fa-search"></em>
                                 </div>
                                 <h4>SEO</h4>
-                                <p>Utilizo códigos com conjuntos de técnicas que melhoram o posicionamento nos sites de busca.</p>
+                                <p>Le referencement de votre site est notre priorité avec le SEO naturel.</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
@@ -338,8 +338,8 @@
                                 <div class="icon">
                                     <em class="fa fa-wand-sparkles"></em>
                                 </div>
-                                <h4>Animações</h4>
-                                <p>Produzo interações que chamam a atenção do usuário, transmitindo sensação de modernidade.</p>
+                                <h4>Multimédia</h4>
+                                <p>Montage des vidéos,Conception des cartes de mariages, des étiquettes .</p>
                             </div>
                         </div>
                         <!-- ==== Service item End ==== -->
@@ -414,17 +414,17 @@
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Contact</h2>
+                            <h2>Contactez moi</h2>
                         </div>
                     </div>
                     <h3 class="contact-title padd-15">Avez vous des Questions ?</h3>
-                    <h4 class="contact-sub-title padd-15">Contactez moi</h4>
+                    <h4 class="contact-sub-title padd-15">Je suis à votre Service</h4>
                     <div class="row">
                         <!-- ==== Contact info item Start ==== -->
                         <div class="contact-info-item padd-15">
                             <div class="icon"><em class="fa fa-phone"></em></div>
                             <h4>Téléphone</h4>
-                            <p>+(223) 78947185/98966458</p>
+                            <p>+(223) 78947185 // 98966458</p>
                         </div>
                         <div class="contact-info-item padd-15">
                             <div class="icon"><em class="fa fa-envelope"></em></div>
@@ -434,17 +434,17 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><em class="fa-brands fa-github"></em></div>
                             <h4>Github</h4>
-                            <p>github.com/<br>emersoncarneirodasilva</p>
+                            <p>https://github.com/<br>Adjaratou7894</p>
                         </div>                        
                         <div class="contact-info-item padd-15">
                             <div class="icon"><em class="fa-brands fa-linkedin"></em></div>
                             <h4>Linkedin</h4>
-                            <p> www.linkedin.com/in/emerson-carneiro-da-silva-2a9402218/</p>
+                            <p> https://www.linkedin.com/in/adjaratou-a-diallo-0776a121b/</p>
                         </div>
                         <!-- ==== Contact info item End ==== -->                        
                     </div>    
                     <h3 class="contact-title padd-15">ENVOYEZ UN EMAIL</h3>
-                    <h4 class="contact-sub-title padd-15">FICAREI FELIZ EM RESPONDER</h4> 
+                    <h4 class="contact-sub-title padd-15">Je suis très réactif aux messages</h4> 
                     <!-- ==== Contact Form ==== --> 
                     <div class="row">
                         <div class="contact-form padd-15">
