--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                             <h3 class="hello">Bonjour, Je m'appele<span class="name">Adjaratou Amadou DIALLO</span></h3>
                             <h3 class="my-profession">Je suis <span class="typing">Ingénieure Developpeuse Full Stack</span></h3>
                             <p>Mon rôle est d'accompagner les entreprises et les particuliers dans la création des sites Web, des applications mobiles, des logos et plus. </p>
-                            <a href="https://github.com/Adjaratou7894/CV" class="btn" target="_blank">Télécharger mon  CV</a>
+                            <a href="./images/CV Adjara2.pdf" class="btn" target="_blank">Télécharger mon  CV</a>
+                             <!-- <a href="https://github.com/Adjaratou7894/CV" class="btn" target="_blank">Télécharger mon  CV</a> -->
                         </div>
                         <div class="home-img padd-15">
                             <img src="./images/hadjara.png" alt="Adjaratou-portfolio" width="80%" height="80%">
