--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                                 <div class="personal-info padd-15">
                                     <div class="row">
                                         <div class="info-item padd-15">
-                                            <p>Date de Naissance: <span>######</span></p>
+                                            <p>Date de Naissance: <span>12/02/1995</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Age : <span>27</span></p>
+                                            <p>Age : <span>28</span></p>
                                         </div>                                        
                                         <div class="info-item padd-15">
                                             <p>Github : <span>https://github.com/Adjaratou7894</span></p>
