--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                     </div>
                     <div class="row">
                         <div class="portfolio-heading padd-15">
-                            <h2>Mes projets Recentes :</h2>
+                            <h2>Mes projets Recents :</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -367,42 +367,42 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://emersoncarneirodasilva.github.io/website_restaurant/" target="_blank"><img src="./images/portfolio/food.png" alt="restaurante"></a>
+                                    <a href="https://github.com/Adjaratou7894/pointageflutter/" target="_blank"><img src="./images/portfolio/pointeur.PNG" alt="ODC-Pointeur"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://emersoncarneirodasilva.github.io/website_petshop/" target="_blank"><img src="./images/portfolio/pet.png" alt="site pet"></a>
+                                    <a href="https://github.com/IvinoDev/FreeTirageFront-end/" target="_blank"><img src="./images/portfolio/tirage.png" alt="FreeTirage"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://emersoncarneirodasilva.github.io/starbucks_clone/" target="_blank"><img src="./images/portfolio/starbucks.png" alt="starbucks"></a>
+                                    <a href="https://github.com/Adjaratou7894/environ2/" target="_blank"><img src="./images/portfolio/transnet.png" alt="Transnet"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://emersoncarneirodasilva.github.io/website_gym/" target="_blank"><img src="./images/portfolio/gym.png" alt="academia"></a>
+                                    <a href="https://github.com/Adjaratou7894/MaliTouristFrontend/" target="_blank"><img src="./images/portfolio/contact.png" alt="MaliDambe"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://emersoncarneirodasilva.github.io/recriando-netflix/" target="_blank"><img src="./images/portfolio/netflix.png" alt="recriando netflix"></a>
+                                    <a href="" target="_blank"><img src="./images/portfolio/Connexion.png" alt="Parking automatique"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://emersoncarneirodasilva.github.io/relogio_glass/" target="_blank"><img src="./images/portfolio/relogio_analogico_glassmorphism.png" alt="relógio analógico glass"></a>
+                                    <a href="https://github.com/Adjaratou7894/environ2/" target="_blank"><img src="./images/portfolio/environ2.png" alt="environ2"></a>
                                 </div>
                             </div>
                         </div>
